--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     width: auto;
     display:flex;
     flex-direction: column;
-    font-size: 35px;
+    font-size:x-large;
     align-items: center;
 }
 .calculator {
@@ -22,19 +22,43 @@ body {
 .display {
     font-family:'Orbitron', sans-serif;
     font-weight: 700;
+    font-style: normal;
     display:flex;
     flex-direction: row-reverse;
     width:70%;
-    height: 10%;
+    height: 8%;
     background-color: rgb(0, 0, 0);
     border: solid 3px rgb(163, 158, 144);
     border-radius: 12px;
-    margin:1.5em;
-    padding:.5em;
-    padding-top:0%;
+    margin:2em;
+    padding:.4em;
+    padding-top:0;
 
 }
 .display,p {
     color:rgb(171, 255, 171);
+    text-decoration: dashed underline overline;
+}
+
+.keypad {
+    display:flex;
+    justify-content: flex-start;
+    height:50%;
+    width: 80%;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.key {
+    width:45px;
+    height: 45px;
+    margin:.5em;
+    flex-direction: row;
+    background-color: grey;;
+    display:flex;
+    justify-content: center;
+    align-content: center;;
     
+}
+.key.button {
+    margin:0%;
 }
