--- a/style.css
+++ b/style.css
@@ -43,12 +43,12 @@ body {
 .keypad {
     display:flex;
     justify-content: flex-start;
-    height:50%;
-    width: 80%;
+    width: 70%;
     flex-direction: row;
     flex-wrap: wrap;
 }
 .key {
+    box-shadow: 1em;;
     width:45px;
     height: 45px;
     margin:.5em;
@@ -57,8 +57,16 @@ body {
     display:flex;
     justify-content: center;
     align-content: center;;
-    
+    margin-right:.5em;
+    margin-top:.5em;
+    text-align:center;
+    flex-direction: column;
+    padding:.3em;
+    font-weight: 900;
+    font-size: large;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', 'Arial, sans-serif';
 }
 .key.button {
     margin:0%;
+    border: solid 3px rgb(0, 0, 0);
 }
