--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ body {
 }
 .calculator {
     margin:1em;
-    width:15em;
-    height:25em;
+    width:12em;
+    height:22em;
     background-color: rgb(231, 223, 201);
     display:flex;
     flex-direction: column;
@@ -34,8 +34,9 @@ body {
     border: solid 3px rgb(163, 158, 144);
     border-radius: 12px;
     margin:2em;
-    padding:.4em;
-    padding-top:0;
+    padding:.3em;
+    padding-top:.5em;
+    
 
 }
 .display,p {
